src/components/room/menu/roomMenu.css
.menu {
	position: absolute;
	top: 12.5rem;
	left: 0;
	display: flex;
}

.item {
	text-align: center;
	padding-bottom: 1rem;
	padding-left: 1rem;
	padding-right: 1rem;
	font-weight: 400;
	letter-spacing: 0.05rem;
	font-size: 1rem;
	text-transform: uppercase;
	margin-right: 2rem;
	color: rgba(255, 255, 255, 0.6);
}

.item:hover {
	color: rgba(255, 255, 255, 0.8);
	cursor: pointer;
}

.itemSelected {
	composes: item;
	color: rgba(255, 255, 255, 0.9);
}

.itemSelected:hover {
	color: rgba(255, 255, 255, 0.9);
}

